--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=5000
 
-MONGO_URI=XXXXX
+MONGO_URI=mongodb+srv://ekumamait:Asekenye1@cluster0.5an5c.mongodb.net/test?retryWrites=true&w=majority
 
 GEOCODER_PROVIDER=mapquest
-GEOCODER_API_KEY=XXXXXX
+GEOCODER_API_KEY=eEWWCM0vA8MLulufZdviLx4kQpg5gnL2
